welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:19: error: not found: value T
    setCouleurBrosse(T(i+1)% T.length)
                     ^Array2:19: error: not found: value T
    setCouleurBrosse(T(i+1)% T.length)
                             ^